<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CBtis83</string>
    <string name="action_settings">Settings</string>
    <string name="txt">"Pedro María Anaya"</string>
    <string name="txt2">Entrar</string>
    <string name="title_activity_opciones">Opciones</string>
    <string name="txt3">Elige una opción:</string>
    <string name="p1">Alta</string>
    <string name="p2">Baja</string>
    <string name="p3">Editar</string>
    <string name="p4">Buscar</string>
    <string name="title_activity_alta">Alta</string>
    <string name="hello_world">Hello world!</string>
    <string name="t1">No. Control:</string>
    <string name="t2">Nombre:</string>
    <string name="t3">Especialidad:</string>
    <string name="t4">Semestre:</string>
    <string name="t5">Edad:</string>
    <string name="t6">Promedio:</string>
    <string name="btna">Guardar</string>
    <string name="btnb">Eliminar</string>
    <string name="btnc">Buscar</string>
    <string name="title_activity_baja">Baja</string>
    <string name="title_activity_editar">Editar</string>
    <string name="title_activity_buscar">Buscar</string>
    <string name="nada"/>

</resources>
