<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="38dp"
        android:text="@string/t1"
        android:textColor="#000000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etNoA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView1"
        android:layout_toRightOf="@+id/textView1"
        android:ems="10" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="31dp"
        android:text="@string/t2"
        android:textColor="#000000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etPromA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView6"
        android:layout_toRightOf="@+id/textView6"
        android:ems="10" />

    <EditText
        android:id="@+id/etedadA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etPromA"
        android:layout_marginBottom="20dp"
        android:layout_toRightOf="@+id/textView6"
        android:ems="10" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignRight="@+id/textView2"
        android:layout_marginBottom="22dp"
        android:text="@string/t6"
        android:textColor="#000000"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etedadA"
        android:layout_alignRight="@+id/textView6"
        android:text="@string/t5"
        android:textColor="#000000"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="44dp"
        android:layout_toRightOf="@+id/textView6"
        android:onClick="EDITAR"
        android:text="@string/btna" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button1"
        android:layout_toRightOf="@+id/button1"
        android:onClick="BUSCAR"
        android:text="@string/p4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/INom"
        android:layout_centerVertical="true"
        android:text="@string/t4"
        android:textColor="#000000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/semA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView4"
        android:layout_toRightOf="@+id/textView1"
        android:ems="10" />

    <TextView
        android:id="@+id/INom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/semA"
        android:layout_alignLeft="@+id/textView6"
        android:layout_marginBottom="34dp"
        android:text="@string/t3"
        android:textColor="#000000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etNomA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/etedadA"
        android:ems="10" />

    <EditText
        android:id="@+id/espA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/INom"
        android:layout_toRightOf="@+id/textView1"
        android:ems="10" >

        <requestFocus />
    </EditText>

</RelativeLayout> 