<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="38dp"
        android:text="@string/t1"
        android:textColor="#000000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView1"
        android:layout_toRightOf="@+id/textView1"
        android:ems="10" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="31dp"
        android:text="@string/t2"
        android:textColor="#000000"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/INom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="46dp"
        android:text="@string/t3"
        android:textColor="#000000"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/esp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etNom"
        android:layout_below="@+id/etNom"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/etNom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/INom"
        android:layout_toRightOf="@+id/textView2"
        android:ems="10" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="46dp"
        android:onClick="ALTA"
        android:text="@string/btna" />

    <EditText
        android:id="@+id/etedad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView5"
        android:layout_toRightOf="@+id/textView5"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/INom"
        android:layout_below="@+id/esp"
        android:layout_marginTop="19dp"
        android:text="@string/t4"
        android:textColor="#000000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etProm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_marginBottom="16dp"
        android:layout_toRightOf="@+id/textView6"
        android:ems="10" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etProm"
        android:layout_alignLeft="@+id/textView5"
        android:text="@string/t6"
        android:textColor="#000000"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etProm"
        android:layout_alignLeft="@+id/textView4"
        android:layout_marginBottom="30dp"
        android:text="@string/t5"
        android:textColor="#000000"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/sem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etNo"
        android:layout_below="@+id/esp" />

</RelativeLayout>